[package]
name = "yt-history-to-htu"
version = "0.1.0"
authors = ["Zacchary Dempsey-Plante <zacc@ztdp.ca>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[profile.release]
codegen-units = 1
lto = true

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
reflection = "0.1"
reflection_derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tsv = "0.1"
